--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ captures/
 # Keystore files
 *.jks
 *.keystore
+**/*/res/values/secrets.xml
 
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
