--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 12 12:22:06 CST 2023
-
-sdk.dir=C\:\\Users\\resen\\AppData\\Local\\Android\\Sdk
+#Sun Nov 12 20:27:45 CST 2023
+sdk.dir=C\:\\Users\\hp\\AppData\\Local\\Android\\Sdk
