--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Nov 12 20:27:45 CST 2023
-sdk.dir=C\:\\Users\\hp\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\resen\\AppData\\Local\\Android\\Sdk
