--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 12 20:27:45 CST 2023
-sdk.dir=C\:\\Users\\resen\\AppData\\Local\\Android\\Sdk
+#Mon Nov 13 20:21:29 CST 2023
+sdk.dir=C\:\\Users\\Heeet\\AppData\\Local\\Android\\Sdk
