reworked my profile fragment

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Nov 13 20:21:29 CST 2023
-sdk.dir=C\:\\Users\\Heeet\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\resen\\AppData\\Local\\Android\\Sdk
