--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 13 20:21:29 CST 2023
-sdk.dir=C\:\\Users\\resen\\AppData\\Local\\Android\\Sdk
+#Wed Nov 22 16:36:37 CST 2023
+sdk.dir=C\:\\Users\\hp\\AppData\\Local\\Android\\Sdk
